--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "axios": "^1.6.5",
     "firebase": "^10.7.1",
     "lottie-react-native": "^6.5.1",
     "react": "18.2.0",
@@ -20,6 +21,7 @@
     "react-native-paper": "^5.12.0",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
+    "react-native-sound": "^0.11.2",
     "react-native-vector-icons": "^10.0.3",
     "react-native-webview": "^13.6.4",
     "react-native-youtube-iframe": "^2.3.0"
