--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "lottie-react-native": "^6.5.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-blob-util": "^0.19.6",
     "react-native-paper": "^5.12.0",
+    "react-native-pdf": "^6.7.4",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-sound": "^0.11.2",
