--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-screens": "^3.29.0",
     "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-sound": "^0.11.2",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-webview": "^13.6.4",
     "react-native-youtube-iframe": "^2.3.0"
