--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-blob-util": "^0.19.6",
+    "react-native-google-mobile-ads": "^12.10.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.0",
     "react-native-pdf": "^6.7.4",
