--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-sound": "^0.11.2",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-tts": "^4.1.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-webview": "^13.6.4",
     "react-native-youtube-iframe": "^2.3.0"
